# beautiful_string

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  string.h
include/bs/: bstring.h
include/bt/: CMakeLists.txt  bstring.h
tests/: CMakeLists.txt  tests_dynamic_storage.cpp
